fixed overflow in card display if text is longer than 3 lines

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -108,7 +108,7 @@ body {
    border-left: 2px solid gold;
    padding: 1em;
    background-color: aliceblue;
-   height: 100px;
+   height: 120px;
    width: 220px;
    align-items: center;
    /* align-content: center; */
@@ -116,10 +116,23 @@ body {
    /* padding: 100px; */
    position: relative;
    transition: 0.5s;
+
+   
+   /* line-clamp: 3; */
 }
 .post-container:hover {
    transform: translatey(-3px);
 
+}
+.post-content {
+  
+   display: -webkit-box;
+   -webkit-line-clamp: 2;
+   line-clamp: 2;
+   -webkit-box-orient: vertical;
+   word-break: break-all;
+   overflow: hidden;
+   
 }
 .post-container .post-title{
    /* font-size: 300px; */
